products/developer-portal-zq2/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: developer-portal-zq2
  namespace: developer-portal-zq2
  labels:
    app.kubernetes.io/name: "developer-portal-zq2"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: "developer-portal-zq2"
