products/developer-portal-zq2/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: developer-portal-zq2
  namespace: developer-portal-zq2
  labels:
    app.kubernetes.io/name: "developer-portal-zq2"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: developer-portal-zq2
                port:
                  number: 80
    - host: dev-zq2.zilliqa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: developer-portal-zq2
                port:
                  number: 80
